--- a/asfimintamaaf.html
+++ b/asfimintamaaf.html
@@ -98,6 +98,7 @@
                                     <p>Please give me access to contact you, via any social media, unblock it. I really miss our time together.</p>
 
                                     <p>Wassalamu'alaikum warahmatullahi wabarakatuh</p>
+                                    <p>I'm sorry, I'm having trouble deploying the website here :( </p>
                                     <p class="text-end">Sincerely,<br><em>Asfi Nur Aizah</em></p>
                                 </div>
                             </div>
